@@ -12,6 +12,8 @@ Features
     - Periodic callbacks. Schedule a job to be executed by the IOLoop every nth ms. (#90)
     - Bug Fix. Selector timeout tuning. (#108)
     - Asynchronous socket to help third party developers. (#109)
+    - Asynchronous HTTP client (#97)
+    - IOLoop.addCallback is thread safe (#103)
 
 Configuration
 ------------
